<resources>
    <string name="app_name">Calculator</string>
    <string name="ButtonС">C</string>
    <string name="ButtonPercent">%</string>
    <string name="ButtonDivision">÷</string>
    <string name="ButtonDelete">⌫</string>
    <string name="Button7">7</string>
    <string name="Button8">8</string>
    <string name="Button9">9</string>
    <string name="ButtonMultiply">X</string>
    <string name="Button4">4</string>
    <string name="Button5">5</string>
    <string name="Button6">6</string>
    <string name="ButtonMinus">-</string>
    <string name="Button1">1</string>
    <string name="Button2">2</string>
    <string name="Button3">3</string>
    <string name="ButtonAddition">+</string>
    <string name="ButtonPoint">.</string>
    <string name="Button0">0</string>
    <string name="ButtonEqually">=</string>
    <string name="TextValue">0</string>
</resources>