<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/LayoutHeight"
        android:layout_weight="@dimen/Weight3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="@dimen/Weight1"
            android:layout_height="@dimen/TextHeight"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/TextRight"
            android:text="@string/TextValue"
            android:textColor="@color/black"
            android:textSize="@dimen/TextSize2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/LayoutHeight"
        android:layout_weight="1">

        <Button
            android:id="@+id/reset"
            android:layout_width="@dimen/ButtonWidth"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/Weight1"
            android:background="@null"
            android:text="@string/ButtonС"
            android:textColor="@color/white"
            android:backgroundTint="@color/purple"
            android:layout_marginRight="@dimen/ButtonMarginRight"
            android:textSize="@dimen/ButtonTextSize" />

        <Button
            android:id="@+id/percent"
            android:layout_width="@dimen/ButtonWidth"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/Weight1"
            android:background="@null"
            android:text="@string/ButtonPercent"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/ButtonMarginRight"
            android:textSize="@dimen/ButtonTextSize"
            android:backgroundTint="@color/purple"/>

        <Button
            android:id="@+id/division"
            android:layout_width="@dimen/ButtonWidth"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/Weight1"
            android:background="@null"
            android:text="@string/ButtonDivision"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/ButtonMarginRight"
            android:textSize="@dimen/ButtonTextSize"
            android:backgroundTint="@color/purple"/>

        <Button
            android:id="@+id/delete"
            android:layout_width="@dimen/ButtonWidth"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/Weight1"
            android:background="@null"
            android:text="@string/ButtonDelete"
            android:textColor="@color/white"
            android:textSize="@dimen/ButtonTextSize"
            android:backgroundTint="@color/purple"/>

    </LinearLayout >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/LayoutHeight"
        android:layout_weight="1">

        <Button
            android:id="@+id/seven"
            android:layout_width="@dimen/ButtonWidth"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/Weight1"
            android:background="@null"
            android:text="@string/Button7"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/ButtonMarginRight"
            android:textSize="@dimen/ButtonTextSize" />

        <Button
            android:id="@+id/eight"
            android:layout_width="@dimen/ButtonWidth"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/Weight1"
            android:background="@null"
            android:text="@string/Button8"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/ButtonMarginRight"
            android:textSize="@dimen/ButtonTextSize" />

        <Button
            android:id="@+id/nine"
            android:layout_width="@dimen/ButtonWidth"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/Weight1"
            android:background="@null"
            android:text="@string/Button9"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/ButtonMarginRight"
            android:textSize="@dimen/ButtonTextSize" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="@dimen/ButtonWidth"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/Weight1"
            android:background="@null"
            android:text="@string/ButtonMultiply"
            android:textColor="@color/white"
            android:textSize="@dimen/ButtonTextSize"
            android:backgroundTint="@color/purple"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/LayoutHeight"
        android:layout_weight="1">

        <Button
            android:id="@+id/four"
            android:layout_width="@dimen/ButtonWidth"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/Weight1"
            android:background="@null"
            android:text="@string/Button4"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/ButtonMarginRight"
            android:textSize="@dimen/ButtonTextSize" />

        <Button
            android:id="@+id/five"
            android:layout_width="@dimen/ButtonWidth"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/Weight1"
            android:background="@null"
            android:text="@string/Button5"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/ButtonMarginRight"
            android:textSize="@dimen/ButtonTextSize" />

        <Button
            android:id="@+id/six"
            android:layout_width="@dimen/ButtonWidth"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/Weight1"
            android:background="@null"
            android:text="@string/Button6"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/ButtonMarginRight"
            android:textSize="@dimen/ButtonTextSize" />

        <Button
            android:id="@+id/minus"
            android:layout_width="@dimen/ButtonWidth"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/Weight1"
            android:background="@null"
            android:text="@string/ButtonMinus"
            android:textColor="@color/white"
            android:textSize="@dimen/ButtonTextSize"
            android:backgroundTint="@color/purple"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/LayoutHeight"
        android:layout_weight="@dimen/Weight1">

        <Button
            android:id="@+id/one"
            android:layout_width="@dimen/ButtonWidth"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/Weight1"
            android:background="@null"
            android:text="@string/Button1"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/ButtonMarginRight"
            android:textSize="@dimen/ButtonTextSize" />

        <Button
            android:id="@+id/two"
            android:layout_width="@dimen/ButtonWidth"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/Weight1"
            android:background="@null"
            android:text="@string/Button2"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/ButtonMarginRight"
            android:textSize="@dimen/ButtonTextSize" />

        <Button
            android:id="@+id/three"
            android:layout_width="@dimen/ButtonWidth"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/Weight1"
            android:background="@null"
            android:text="@string/Button3"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/ButtonMarginRight"
            android:textSize="@dimen/ButtonTextSize" />

        <Button
            android:id="@+id/plus"
            android:layout_width="@dimen/ButtonWidth"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/Weight1"
            android:background="@null"
            android:text="@string/ButtonAddition"
            android:textColor="@color/white"
            android:textSize="@dimen/ButtonTextSize"
            android:backgroundTint="@color/purple"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/LayoutHeight"
        android:layout_weight="@dimen/Weight1">

        <Button
            android:id="@+id/point"
            android:layout_width="@dimen/ButtonWidth"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/Weight1"
            android:background="@null"
            android:text="@string/ButtonPoint"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/ButtonMarginRight"
            android:textSize="@dimen/ButtonTextSize" />

        <Button
            android:id="@+id/zero"
            android:layout_width="@dimen/ButtonWidth"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/Weight1"
            android:background="@null"
            android:text="@string/Button0"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/ButtonMarginRight"
            android:textSize="@dimen/ButtonTextSize" />

        <Button
            android:id="@+id/equals"
            android:layout_width="@dimen/ButtonWidth"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/Weight2"
            android:background="@null"
            android:text="@string/ButtonEqually"
            android:textColor="@color/white"
            android:textSize="@dimen/ButtonTextSize"
            android:backgroundTint="@color/orange"/>

    </LinearLayout>

</LinearLayout>